--- a/escom-bpm-ear/pom.xml
+++ b/escom-bpm-ear/pom.xml
@@ -31,12 +31,18 @@
             <version>1.0-SNAPSHOT</version>
             <type>war</type>
         </dependency>
+        <dependency>
+            <groupId>com.maxfill</groupId>
+            <artifactId>escom-bpm-liquibase</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <type>war</type>
+        </dependency>
          <dependency>
             <groupId>com.maxfill</groupId>
             <artifactId>escom-bpm-resource</artifactId>
             <version>1.0-SNAPSHOT</version>
             <type>jar</type>
-        </dependency>  
+        </dependency>       
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-api</artifactId>
