--- a/escom-bpm-liquibase/pom.xml
+++ b/escom-bpm-liquibase/pom.xml
@@ -2,41 +2,34 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <artifactId>escom-bpm</artifactId>
-        <groupId>com.maxfill</groupId>
-        <version>1.0-SNAPSHOT</version>
-    </parent>
+    <artifactId>escom-bpm</artifactId>
+    <groupId>com.maxfill</groupId>
+    <version>1.0-SNAPSHOT</version>
+  </parent>
 
     <groupId>com.maxfill</groupId>
-    <artifactId>escom-bpm-resource</artifactId>
+    <artifactId>escom-bpm-liquibase</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>app-client</packaging>
+    <packaging>war</packaging>
 
-    <name>escom-bpm-resource</name>
+    <name>escom-bpm-liquibase</name>
 
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>        
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     
     <dependencies>
-        <!-- https://mvnrepository.com/artifact/org.liquibase/liquibase-maven-plugin -->
-        <dependency>
-            <groupId>org.liquibase</groupId>
-            <artifactId>liquibase-maven-plugin</artifactId>
-            <version>3.5.3</version>
-        </dependency>
-        <!-- https://mvnrepository.com/artifact/com.microsoft.sqlserver/sqljdbc4 -->
-        <!--dependency>
-            <groupId>com.microsoft.sqlserver</groupId>
-            <artifactId>sqljdbc4</artifactId>
-            <version>4.0</version>
-        </dependency-->
         <dependency>
             <groupId>javax</groupId>
-            <artifactId>javaee-api</artifactId>
+            <artifactId>javaee-web-api</artifactId>
             <version>7.0</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+            <version>3.5.3</version>
         </dependency>
     </dependencies>
 
@@ -56,15 +49,10 @@
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-acr-plugin</artifactId>
-                <version>1.0</version>
-                <extensions>true</extensions>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>2.3</version>
                 <configuration>
-                    <archive>
-                        <manifest>                            
-                            <mainClass>com.maxfill.escom.bpm.resource.Main</mainClass>
-                        </manifest>
-                    </archive>
+                    <failOnMissingWebXml>false</failOnMissingWebXml>
                 </configuration>
             </plugin>
             <plugin>
@@ -92,24 +80,6 @@
                     </execution>
                 </executions>
             </plugin>
-            <!--plugin>
-                <groupId>org.liquibase</groupId>
-                <artifactId>liquibase-maven-plugin</artifactId>
-                <version>3.5.3</version>
-                <configuration>                  
-                    <propertyFile>src/main/resources/liquibase/liquibase.properties</propertyFile>
-                    <promptOnNonLocalDatabase>false</promptOnNonLocalDatabase>
-                </configuration>                
-                <executions>
-                      <execution>
-                        <phase>process-resources</phase>                                                                  
-                        <goals>
-                              <goal>update</goal>
-                        </goals>
-                      </execution>
-                </executions>
-             </plugin-->            
-            
         </plugins>
     </build>
 
