--- a/escom-bpm-ejb/pom.xml
+++ b/escom-bpm-ejb/pom.xml
@@ -110,6 +110,19 @@
     </dependencies>
 
     <build>
+        <resources>
+            <resource>
+                <targetPath>META-INF</targetPath>
+                <directory>src</directory>
+                <includes>
+                    <include>jax-ws-catalog.xml</include>
+                    <include>wsdl/**</include>
+                </includes>
+            </resource>
+            <resource>
+                <directory>src/main/resources</directory>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -155,6 +168,43 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.jvnet.jax-ws-commons</groupId>
+                <artifactId>jaxws-maven-plugin</artifactId>
+                <version>2.3</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>wsimport</goal>
+                        </goals>
+                        <configuration>
+                            <wsdlFiles>
+                                <wsdlFile>localhost_8080/escom-bpm-info-1.0-SNAPSHOT/ReleaseInfo.wsdl</wsdlFile>
+                            </wsdlFiles>
+                            <packageName>com.maxfill.services.update</packageName>
+                            <wsdlLocation>http://localhost:8080/escom-bpm-info-1.0-SNAPSHOT/ReleaseInfo?wsdl</wsdlLocation>
+                            <staleFile>${project.build.directory}/jaxws/stale/ReleaseInfo.stale</staleFile>
+                        </configuration>
+                        <id>wsimport-generate-ReleaseInfo</id>
+                        <phase>generate-sources</phase>
+                    </execution>
+                </executions>
+                <dependencies>
+                    <dependency>
+                        <groupId>javax.xml</groupId>
+                        <artifactId>webservices-api</artifactId>
+                        <version>2.0</version>
+                    </dependency>
+                </dependencies>
+                <configuration>
+                    <sourceDestDir>${project.build.directory}/generated-sources/jaxws-wsimport</sourceDestDir>
+                    <xnocompile>true</xnocompile>
+                    <verbose>true</verbose>
+                    <extension>true</extension>
+                    <catalog>${basedir}/src/jax-ws-catalog.xml</catalog>
+                    <target>2.0</target>
+                </configuration>
             </plugin>
         </plugins>
     </build>
