--- a/escom-bpm-liquibase/src/main/webapp/WEB-INF/web.xml
+++ b/escom-bpm-liquibase/src/main/webapp/WEB-INF/web.xml
@@ -10,7 +10,7 @@
     </context-param>
     <context-param>
         <param-name>liquibase.datasource</param-name>
-        <param-value>java:/EscomJavaJNDI</param-value>
+        <param-value>java:/EscomJNDI</param-value>
     </context-param>
     <context-param>
         <param-name>liquibase.onerror.fail</param-name>
