--- a/escom-bpm-liquibase/src/main/webapp/WEB-INF/web.xml
+++ b/escom-bpm-liquibase/src/main/webapp/WEB-INF/web.xml
@@ -22,7 +22,7 @@
     </context-param>
     <context-param>
         <param-name>liquibase.contexts</param-name>
-        <param-value>updatedata</param-value>
+        <param-value>initdata</param-value>
     </context-param>
     <listener>
         <listener-class>liquibase.integration.servlet.LiquibaseServletListener</listener-class>
