--- a/escom-bpm-ejb/pom.xml
+++ b/escom-bpm-ejb/pom.xml
@@ -87,6 +87,12 @@
             <artifactId>jasperreports</artifactId>
             <version>6.3.0</version>
             <type>jar</type>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.olap4j</groupId>
+                    <artifactId>olap4j</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <!-- https://mvnrepository.com/artifact/net.sf.barcode4j/barcode4j -->
         <dependency>
@@ -159,6 +165,11 @@
             <artifactId>json</artifactId>
             <version>20160810</version>
             <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.44</version>
         </dependency>
         <dependency>
             <groupId>javax</groupId>
