--- a/escom-bpm-ejb/pom.xml
+++ b/escom-bpm-ejb/pom.xml
@@ -36,7 +36,14 @@
     </dependencyManagement>
    
     <dependencies> 
-                
+           
+         <!-- https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt -->
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.7.0</version>
+        </dependency>
+             
         <dependency>
           <groupId>org.modeshape</groupId>
           <artifactId>modeshape-jcr-api</artifactId>
