--- a/escom-bpm-web/pom.xml
+++ b/escom-bpm-web/pom.xml
@@ -22,6 +22,13 @@
 
     <dependencies> 
 
+        <!-- https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.3.3</version>
+        </dependency>
+
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>escom-bpm-resource</artifactId>
@@ -103,13 +110,6 @@
             <artifactId>escom-bpm-ejb</artifactId>
             <version>${project.version}</version>
             <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>commons-lang</groupId>
-            <artifactId>commons-lang</artifactId>
-            <version>2.6</version>
-            <scope>compile</scope>
-            <type>jar</type>
         </dependency>
         <dependency>
             <groupId>javax.inject</groupId>
