--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,30 @@
 /escom-bpm-app/target/
 /escom-bpm-liquibase/target/
+/.idea/artifacts/escom_bpm_liquibase_war.xml
+Будет удалено .idea/artifacts/escom_bpm_ear_ear.xml
+Будет удалено .idea/artifacts/escom_bpm_ear_ear_exploded.xml
+Будет удалено .idea/artifacts/escom_bpm_ejb_ejb.xml
+Будет удалено .idea/artifacts/escom_bpm_ejb_ejb_exploded.xml
+Будет удалено .idea/artifacts/escom_bpm_web_war.xml
+Будет удалено .idea/artifacts/escom_bpm_web_war_exploded.xml
+Будет удалено .idea/compiler.xml
+Будет удалено .idea/encodings.xml
+Будет удалено .idea/escom-bpm.iml
+Будет удалено .idea/inspectionProfiles/
+Будет удалено .idea/libraries/
+Будет удалено .idea/misc.xml
+Будет удалено .idea/modules.xml
+Будет удалено .idea/vcs.xml
+Будет удалено .idea/webContexts.xml
+Будет удалено .idea/workspace.xml
+Будет удалено ".~lock.\320\240\321\203\320\272\320\276\320\262\320\276\320\264\321\201\321\202\320\262\320\276 \320\277\320\276 \320\277\320\276\320\273\320\275\320\276\320\271 \321\203\321\201\321\202\320\260\320\275\320\276\320\262\320\272\320\265 \321\201 \320\275\321\203\320\273\321\217.docx#"
+Будет удалено escom-bpm-ear/escom-bpm-ear.iml
+Будет удалено escom-bpm-ear/target/
+Будет удалено escom-bpm-ejb/escom-bpm-ejb.iml
+Будет удалено escom-bpm-ejb/target/
+Будет удалено escom-bpm-liquibase/escom-bpm-liquibase.iml
+Будет удалено escom-bpm-resource/escom-bpm-resource.iml
+Будет удалено escom-bpm-resource/target/
+Будет удалено escom-bpm-web/escom-bpm-web.iml
+Будет удалено escom-bpm-web/lib/
+/.idea/artifacts/escom_bpm_liquibase_war_exploded.xml
