--- a/escom-bpm-ejb/pom.xml
+++ b/escom-bpm-ejb/pom.xml
@@ -177,7 +177,7 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.45</version>
-            <scope>provided</scope>
+            <scope>jar</scope>
         </dependency>
         <dependency>
             <groupId>javax</groupId>
