серьёзная доработка прав доступа в настройках объектов: сделано инплейс редактирование прав доступа, сделано редактирование состояний объектов

--- a/escom-bpm-ejb/pom.xml
+++ b/escom-bpm-ejb/pom.xml
@@ -200,6 +200,11 @@
             <artifactId>websocket-client</artifactId>
             <version>9.3.14.v20161028</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.oshi</groupId>
+            <artifactId>oshi-core</artifactId>
+            <version>RELEASE</version>
+        </dependency>
     </dependencies>
 
     <build>
