--- a/escom-bpm-web/pom.xml
+++ b/escom-bpm-web/pom.xml
@@ -38,6 +38,12 @@
             <version>2.6.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.dblock</groupId>
+            <artifactId>oshi-core</artifactId>
+            <version>LATEST</version>
+        </dependency>
+
         <!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
         <dependency>
             <groupId>org.apache.poi</groupId>
