Доработка таймера процесса

--- a/docker/datastore/configuration/escom.properties
+++ b/docker/datastore/configuration/escom.properties
@@ -1,21 +1,29 @@
 SERVER_OS=UNIX
 SERVER_LOCALE=RU
-SERVER_PATH=/opt/wildfly/
-UPLOAD_PATH=/opt/wildfly/standalone/attachments/
+SERVER_PATH=/home/maksim/wildfly/
+UPLOAD_PATH=/home/maksim/wildfly/standalone/attachments/
 MAX_UPLOAD_SIZE=10485760
 ENCODING=UTF-8
-DEFAULT_SMTP_SERVER=
-DEFAULT_IMAP_SERVER=
+DEFAULT_SMTP_SERVER=smtp.rambler.ru
+DEFAULT_IMAP_SERVER=imap.rambler.ru
 DEFAULT_SMTP_PORT=25
 DEFAULT_IMAP_PORT=993
-DEFAULT_EMAIL_SENDER=
-LDAP_SERVER=
+DEFAULT_EMAIL_SENDER=test@rambler.ru
+LDAP_SERVER=ldap://192.168.0.100:389
 SERVER_ID=77
-SERVER_URL=https://62.173.140.9:9443/
-TEMP_FOLDER=/opt/wildfly/standalone/tmp/
-JASPER_REPORTS=/opt/wildfly/standalone/jasper_reports/
+SERVER_URL=https://localhost:9443/
+TEMP_FOLDER=/home/maksim/wildfly/standalone/tmp/
+JASPER_REPORTS=/home/maksim/wildfly/standalone/jasper_reports/
 DEFAULT_PDF_ENCODING=Cp1251
 DEFAULT_PDF_FONT=arial.ttf
-CONVERTOR_PDF=unoconv
+CONVERTOR_PDF=
 FULL_SEARCHE_CONNECT_URL=jdbc:mysql://127.0.0.1:9306?characterEncoding=utf8&maxAllowedPacket=512000
 MAIL_SSL_CONNECT=true
+SMS_HOST_PROTOCOL=https
+SMS_HOST_GATE=api.smsfeedback.ru
+SMS_HOST_PORT=443
+SMS_LOGIN=MaxFill
+SMS_PWL=StaffClassic1979
+SMS_SENDER=TEST-SMS
+SMS_COMMAND=/messages/v2/send/?phone=%2B{0}&text={1}&sender={2}
+SMS_MAX_COUNT=2
