--- a/escom-bpm-web/pom.xml
+++ b/escom-bpm-web/pom.xml
@@ -31,6 +31,13 @@
 
     <dependencies>
 
+        <!-- https://mvnrepository.com/artifact/org.omnifaces/omnifaces -->
+        <dependency>
+            <groupId>org.omnifaces</groupId>
+            <artifactId>omnifaces</artifactId>
+            <version>2.7</version>
+        </dependency>
+
         <!-- https://mvnrepository.com/artifact/org.apache.xmlbeans/xmlbeans -->
         <dependency>
             <groupId>org.apache.xmlbeans</groupId>
@@ -76,7 +83,7 @@
             <artifactId>commons-exec</artifactId>
             <version>1.3</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/javax.enterprise.concurrent/javax.enterprise.concurrent-api -->
+
         <dependency>
             <groupId>javax.enterprise.concurrent</groupId>
             <artifactId>javax.enterprise.concurrent-api</artifactId>
