--- a/escom-bpm-web/src/main/webapp/WEB-INF/web.xml
+++ b/escom-bpm-web/src/main/webapp/WEB-INF/web.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
+<web-app version="3.1" 
+         xmlns="http://xmlns.jcp.org/xml/ns/javaee" 
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
     <context-param>
         <param-name>sessionExpiredRedirect</param-name>
         <param-value>true</param-value>
@@ -12,8 +15,9 @@
     
     <context-param>
         <param-name>javax.faces.PROJECT_STAGE</param-name>
+        <!--param-value>Production</param-value-->
         <param-value>Development</param-value>
-    </context-param>
+    </context-param>    
     <context-param>
         <param-name>javax.faces.DATETIMECONVERTER_DEFAULT_TIMEZONE_IS_SYSTEM_TIMEZONE</param-name>
         <param-value>true</param-value>
@@ -24,11 +28,11 @@
     </context-param>
     <context-param>
         <param-name>ReleaseNumber</param-name>
-        <param-value>006</param-value>
+        <param-value>007</param-value>
     </context-param>
     <context-param>
         <param-name>ReleaseDate</param-name>
-        <param-value>2018-01-15</param-value>
+        <param-value>2018-08-14</param-value>
     </context-param>
     <filter>
         <filter-name>RedirectFilter</filter-name>
@@ -68,10 +72,12 @@
     <welcome-file-list>
         <welcome-file>/faces/login.xhtml</welcome-file>
     </welcome-file-list>
+    
     <error-page>
         <exception-type>javax.faces.application.ViewExpiredException</exception-type>
         <location>/faces/view/errors/expire.xhtml</location>
     </error-page>
+    
     <error-page>
         <error-code>404</error-code>
         <location>/faces/view/errors/404.xhtml</location>
