--- a/escom-bpm-web/pom.xml
+++ b/escom-bpm-web/pom.xml
@@ -112,25 +112,15 @@
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <version>2.5</version>
+            <scope>provided</scope>
         </dependency>                
 
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
             <version>3.4</version>
-        </dependency>            
-        
-        <dependency>
-            <groupId>net.sf.jasperreports</groupId>
-            <artifactId>jasperreports</artifactId>
-            <version>6.3.0</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.olap4j</groupId>
-                    <artifactId>olap4j</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
+            <scope>provided</scope>
+        </dependency>                    
 
         <dependency>
             <groupId>org.primefaces.themes</groupId>
