--- a/escom-bpm-ear/pom.xml
+++ b/escom-bpm-ear/pom.xml
@@ -52,6 +52,27 @@
     
     <build>
         <plugins>
+            <!--plugin>
+                <groupId>org.wildfly.plugins</groupId>
+                <artifactId>wildfly-maven-plugin</artifactId>
+                <version>1.2.2.Final</version>
+                <executions>
+                    <execution>
+                        <phase>install</phase>
+                        <goals>
+                            <goal>deploy</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <hostname>localhost</hostname>
+                    <port>9990</port>
+                    <username>admin</username>
+                    <password>Qwerty</password>
+                    <name>escom-bpm-web.ear</name>                    
+                </configuration>	
+            </plugin-->
+            
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
