--- a/escom-bpm-ear/pom.xml
+++ b/escom-bpm-ear/pom.xml
@@ -69,7 +69,8 @@
                     <port>9990</port>
                     <username>admin</username>
                     <password>Qwerty</password>
-                    <name>escom-bpm-web.ear</name>                    
+                    <name>escom-bpm-web.ear</name>
+                    <jboss-home>/opt/wildfly</jboss-home>                  
                 </configuration>	
             </plugin-->
             
