--- a/escom-bpm-web/src/main/webapp/WEB-INF/web.xml
+++ b/escom-bpm-web/src/main/webapp/WEB-INF/web.xml
@@ -36,6 +36,16 @@
     </context-param>
 
     <context-param>
+        <param-name>com.sun.faces.numberOfLogicalViews</param-name>
+        <param-value>70</param-value>
+    </context-param>
+
+    <context-param>
+        <param-name>com.sun.faces.numberOfViewsInSession</param-name>
+        <param-value>70</param-value>
+    </context-param>
+
+    <context-param>
         <param-name>VersionNumber</param-name>
         <param-value>1.03</param-value>
     </context-param>    
