--- a/docker/datastore/configuration/escom_win.properties
+++ b/docker/datastore/configuration/escom_win.properties
@@ -24,7 +24,7 @@ SMS_HOST_PROTOCOL=https
 SMS_HOST_GATE=api.smsfeedback.ru
 SMS_HOST_PORT=443
 SMS_LOGIN=MaxFill
-SMS_PWL=StaffClassic1979
+SMS_PWL=
 SMS_SENDER=TEST-SMS
 SMS_COMMAND=/messages/v2/send/?phone=%2B{0}&text={1}&sender={2}
 SMS_MAX_COUNT=2
