--- a/escom-bpm-ejb/pom.xml
+++ b/escom-bpm-ejb/pom.xml
@@ -25,8 +25,19 @@
             <artifactId>escom-bpm-resource</artifactId>
             <version>${project.version}</version>
             <scope>provided</scope>
-        </dependency>                
-             
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-core</artifactId>
+            <version>1.3</version>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-api</artifactId>
