--- a/docker/datastore/configuration/escom.properties
+++ b/docker/datastore/configuration/escom.properties
@@ -10,7 +10,6 @@ DEFAULT_SMTP_PORT=25
 DEFAULT_IMAP_PORT=993
 DEFAULT_EMAIL_SENDER=test@rambler.ru
 LDAP_SERVER=ldap://192.168.0.100:389
-SERVER_ID=77
 SERVER_URL=https://localhost:9443/
 TEMP_FOLDER=/home/maksim/wildfly/standalone/tmp/
 JASPER_REPORTS=/home/maksim/wildfly/standalone/jasper_reports/
@@ -27,3 +26,4 @@ SMS_PWL=
 SMS_SENDER=TEST-SMS
 SMS_COMMAND=/messages/v2/send/?phone=%2B{0}&text={1}&sender={2}
 SMS_MAX_COUNT=2
+DISK_SIZE=1000
